Add stack member management
